cmake_minimum_required(VERSION 3.0)
project(Tokenizer C)
message(CHECK_START "Detecting system type")
if(UNIX)
    message(STATUS "Unix system detected")
    message(STATUS "This is a ${CMAKE_SYSTEM_NAME} system")
elseif(APPLE)
    message(STATUS "Apple system detected")
    message(STATUS "This is a ${CMAKE_SYSTEM_NAME} system")
elseif(WIN32)
    message(STATUS "Windows system detected")
else()
    message(FATAL_ERROR "Unsupported system")
endif()
message(CHECK_PASS "System type detected")
set(CMAKE_C_STANDARD 99)
add_executable(tokenizer main.c)